Fix -export-fixes on clazy-standalone with multiple files

TUDiag was being exported multiple times rewriting the same file.
Export at the end only.

BUG: 409983