src/Clazy.cpp
@@ -238,7 +238,7 @@ bool ClazyASTAction::ParseArgs(const CompilerInstance &ci, const std::vector<std
 
     if (parseArgument("help", args)) {
         m_context = new ClazyContext(ci, headerFilter, ignoreDirs,
-                                     exportFixesFilename, ClazyContext::ClazyOption_None);
+                                     exportFixesFilename, {}, ClazyContext::ClazyOption_None);
         PrintHelp(llvm::errs());
         return true;
     }
@@ -264,7 +264,7 @@ bool ClazyASTAction::ParseArgs(const CompilerInstance &ci, const std::vector<std
     if (parseArgument("export-fixes", args))
         exportFixesFilename = args.at(0);
 
-    m_context = new ClazyContext(ci, headerFilter, ignoreDirs, exportFixesFilename, m_options);
+    m_context = new ClazyContext(ci, headerFilter, ignoreDirs, exportFixesFilename, {}, m_options);
 
     // This argument is for debugging purposes
     const bool dbgPrintRequestedChecks = parseArgument("print-requested-checks", args);
@@ -370,19 +370,21 @@ ClazyStandaloneASTAction::ClazyStandaloneASTAction(const string &checkList,
                                                    const string &headerFilter,
                                                    const string &ignoreDirs,
                                                    const string &exportFixesFilename,
+                                                   const std::vector<string> &translationUnitPaths,
                                                    ClazyContext::ClazyOptions options)
     : clang::ASTFrontendAction()
     , m_checkList(checkList.empty() ? "level1" : checkList)
     , m_headerFilter(headerFilter.empty() ? getEnvVariable("CLAZY_HEADER_FILTER") : headerFilter)
     , m_ignoreDirs(ignoreDirs.empty() ? getEnvVariable("CLAZY_IGNORE_DIRS") : ignoreDirs)
     , m_exportFixesFilename(exportFixesFilename)
+    , m_translationUnitPaths(translationUnitPaths)
     , m_options(options)
 {
 }
 
 unique_ptr<ASTConsumer> ClazyStandaloneASTAction::CreateASTConsumer(CompilerInstance &ci, llvm::StringRef)
 {
-    auto context = new ClazyContext(ci, m_headerFilter, m_ignoreDirs, m_exportFixesFilename, m_options);
+    auto context = new ClazyContext(ci, m_headerFilter, m_ignoreDirs, m_exportFixesFilename, m_translationUnitPaths, m_options);
     auto astConsumer = new ClazyASTConsumer(context);
 
     auto cm = CheckManager::instance();
