src/Clazy.h
@@ -86,6 +86,7 @@ public:
                                       const std::string &headerFilter,
                                       const std::string &ignoreDirs,
                                       const std::string &exportFixesFilename,
+                                      const std::vector<std::string> &translationUnitPaths,
                                       ClazyContext::ClazyOptions = ClazyContext::ClazyOption_None);
 protected:
     std::unique_ptr<clang::ASTConsumer> CreateASTConsumer(clang::CompilerInstance &ci, llvm::StringRef) override;
@@ -94,6 +95,7 @@ private:
     const std::string m_headerFilter;
     const std::string m_ignoreDirs;
     const std::string m_exportFixesFilename;
+    const std::vector<std::string> m_translationUnitPaths;
     const ClazyContext::ClazyOptions m_options;
 };
 
