src/FixItExporter.h
@@ -33,8 +33,9 @@ class FixItExporter
     : public clang::DiagnosticConsumer
 {
 public:
-    FixItExporter(clang::DiagnosticsEngine &DiagEngine, clang::SourceManager &SourceMgr,
-                  const clang::LangOptions &LangOpts, const std::string &exportFixes);
+    explicit FixItExporter(clang::DiagnosticsEngine &DiagEngine, clang::SourceManager &SourceMgr,
+                           const clang::LangOptions &LangOpts, const std::string &exportFixes,
+                           bool isClazyStandalone);
 
     ~FixItExporter() override;
 
@@ -60,11 +61,10 @@ private:
     const std::string exportFixes;
     DiagnosticConsumer *Client = nullptr;
     std::unique_ptr<DiagnosticConsumer> Owner;
-    clang::tooling::TranslationUnitDiagnostics TUDiag;
     bool m_recordNotes = false;
     clang::tooling::Diagnostic ConvertDiagnostic(const clang::Diagnostic &Info);
     clang::tooling::Replacement ConvertFixIt(const clang::FixItHint &Hint);
-
+    const bool m_isClazyStandalone;
 };
 
 #endif // CLAZY_FIX_IT_EXPORTER_H
